# LEMMA

./: .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  Makefile.orig  README.md  index.html  mkdocs.yml  sitemap.xml  test_genotype_mat.cpp  test_updates.cpp
.github/actions/setup-mpi/: action.yml  setup-mpi.sh
.github/workflows/: ci.yml
R/: check_joint_model.r  check_t2_lm.r  check_t6_lm2.r  check_t7_varbvs_sub.R  check_t8_varbvs.R  check_test4.r  misc.R  plot_vbayes_pip.R  vbayesr_commandline.R
R/t10/: check_output.R  gen_hyps.R
R/t7/: gen_hyps.R
R/t8/: gen_hyps.R
R/t9/: gen_hyps.R  t9_run_vbayesr.R
R/test7/: check_output.R  run_VBayesR.R  run_varbvs.R
R/vbayes_x_tests/: check_output.R  run_VBayesR.R
docs/: gplemma.md  index.md  install.md  lemma.md
example/: bgen_filenames.txt  n5k_p20k_example.bgen.bgi  n5k_p20k_example_chr1.bgen  n5k_p20k_example_chr1.bgen.bgi  n5k_p20k_example_chr10.bgen  n5k_p20k_example_chr10.bgen.bgi  n5k_p20k_example_chr11.bgen  n5k_p20k_example_chr11.bgen.bgi  n5k_p20k_example_chr12.bgen  n5k_p20k_example_chr12.bgen.bgi  n5k_p20k_example_chr13.bgen  n5k_p20k_example_chr13.bgen.bgi  n5k_p20k_example_chr14.bgen  n5k_p20k_example_chr14.bgen.bgi  n5k_p20k_example_chr15.bgen  n5k_p20k_example_chr15.bgen.bgi  n5k_p20k_example_chr16.bgen  n5k_p20k_example_chr16.bgen.bgi  n5k_p20k_example_chr17.bgen  n5k_p20k_example_chr17.bgen.bgi  n5k_p20k_example_chr18.bgen  n5k_p20k_example_chr18.bgen.bgi  n5k_p20k_example_chr19.bgen  n5k_p20k_example_chr19.bgen.bgi  n5k_p20k_example_chr2.bgen  n5k_p20k_example_chr2.bgen.bgi  n5k_p20k_example_chr20.bgen  n5k_p20k_example_chr20.bgen.bgi  n5k_p20k_example_chr21.bgen  n5k_p20k_example_chr21.bgen.bgi  n5k_p20k_example_chr22.bgen  n5k_p20k_example_chr22.bgen.bgi  n5k_p20k_example_chr3.bgen  n5k_p20k_example_chr3.bgen.bgi  n5k_p20k_example_chr4.bgen  n5k_p20k_example_chr4.bgen.bgi  n5k_p20k_example_chr5.bgen  n5k_p20k_example_chr5.bgen.bgi  n5k_p20k_example_chr6.bgen  n5k_p20k_example_chr6.bgen.bgi  (+6 more)
examples/: check_reference_passing.cpp  check_thread.cpp  file_parse.cpp  genotype_matrix_multithread.cpp  profile_read_cols.cpp  test_XtDX.cpp  test_code.cpp  test_compression_storage.cpp  test_data_type_size.cpp  test_gaussian.cpp  test_genotype_mat.cpp  test_mkl_Xtv.cpp  test_updates.cpp  test_updates_constants_out_of_loop.cpp  test_updates_internal_dot.cpp  test_vector_matrix_mult.cpp
gplemma/: index.html
include/: CMakeLists.txt  ParseAndAddCatchTests.cmake
include/bgen/: CHANGELOG.md  CMakeLists.txt  README.md  waf  wscript
include/bgen/db/: CMakeLists.txt
include/bgen/test/unit/: CMakeLists.txt  test_utils.hpp
install/: index.html
lemma/: index.html
scripts/: convert_commandline_args.sh  preprocess_ldms_groups.R
search/: search_index.json
src/: Prior.cpp  Prior.hpp  bgen_parser.hpp  bgen_prog.cpp  bgen_wrapper.cpp  bgen_wrapper.hpp  class.h  data.cpp  data.hpp  distributions.hpp  eigen_utils.cpp  eigen_utils.hpp  file_streaming.cpp  file_streaming.hpp  file_utils.cpp  file_utils.hpp  genotype_matrix.cpp  genotype_matrix.hpp  hyps.cpp  hyps.hpp  levenberg_marquardt.hpp  main.cpp  misc_utils.hpp  mpi_utils.cpp  mpi_utils.hpp  my_timer.hpp  nelder_mead.cpp  nelder_mead.hpp  parameters.hpp  parse_arguments.cpp  parse_arguments.hpp  pve.cpp  pve.hpp  rhe_reg.cpp  rhe_reg.hpp  rhe_reg_component.cpp  rhe_reg_component.hpp  snpwise_lm.hpp  stats_tests.cpp  stats_tests.hpp  (+9 more)
src/tools/: cxxopts.hpp
test/: tests  tests-factorial.cpp  tests-main.cpp  tests-parse-arguments.cpp
tests/: tests-main.cpp
unit/: main.cpp  test_acceleration.cpp  test_archive.cpp  test_bgen_wrapper.cpp  test_data.cpp  test_eigen.cpp  test_gplemma.cpp  test_hyps.cpp  test_main.cpp  test_momentum.cpp  test_nelder_mead.cpp  test_priors.cpp  test_pve.cpp  test_resume_inference.cpp  test_snptests.cpp  tests-main-v2.cpp
unit/data/: n25_sample_ids.txt  n50_p100.bgen  n50_p100.bgen.bgi  n50_p100.sample  n50_p100_env.txt  n50_p100_env1_sq.txt  n50_p100_nm_env_weights.txt  n50_p100_ones.txt  p100_variants.txt  pheno.txt  single_hyps_gxage.txt  single_hyps_gxage_probs.txt
unit/data/test_pve/: gaussian_noise_50_x_2.txt  gaussian_noise_50_x_5.txt
